# nixpkgs-rust-service-example

./: .gitignore  Cargo.toml  README.md  dockerImages.nix  dprint.json  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: ci.yml
nix/: default.nix
scripts/: build_docker_image.sh
service/: Cargo.toml
service/src/: main.rs
