[package]
name = "axum_example_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
rdkafka = { version = "0.36.0", features = ["cmake-build"] }
reqwest = "0.11"
rocksdb = "0.21"
tempfile = "3.3"
tokio = { version = "1.0", features = ["full"] }
